@@ -91,8 +91,7 @@ static const char template_pattern[] =
 "  return 1;\n"
 "}\n"
 "\n"
-"int\n"
-"main(int argc, char *argv[])\n"
+"int main(int argc, char *argv[])\n"
 "{\n"
 "  %s initializer(argc, argv);\n"
 //"  eyedb::init(argc, argv);\n"
@@ -105,12 +104,9 @@ static const char template_pattern[] =
 "  eyedb::Exception::setMode(eyedb::Exception::ExceptionMode);\n"
 "\n"
 "  try {\n"
-"    eyedb::Connection conn;\n"
+"    eyedb::Connection conn(true);\n"
 "\n"
-"    conn.open();\n"
-"\n"
-"    %sDatabase db(argv[1]);\n"
-"    db.open(&conn, eyedb::Database::DBRW);\n"
+"    %sDatabase db(&conn, argv[1], eyedb::Database::DBRW);\n"
 "\n"
 "    db.transactionBegin();\n"
 "\n"
